[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memorme"
version = "0.6.0"
description = "Ultra-light AI memory MCP server with semantic search, batch operations, TTL, and tag-based organization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "memory", "semantic-search", "embedding", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.1.0",
    "sentence-transformers>=3.0.0",
    "sqlite-vec>=0.1.0",
    "numpy>=1.24.0",
    "hnswlib>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]
hnsw = [
    "hnswlib>=0.8.0",
]
colbert = [
    "ragatouille>=0.1.0",
]
full = [
    "hnswlib>=0.8.0",
    "ragatouille>=0.1.0",
]

[project.scripts]
memorme = "memory.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["memory"]
omit = ["tests/*"]
